# tbankjava

.github/workflows/: maven-publish.yml
WeatherCastApp/: .gitignore  Dockerfile  docker-compose.yaml  pom.xml
WeatherCastApp/schema-loader/: Dockerfile  load-schemas.sh
WeatherCastApp/src/main/avro/: WeatherResponseKafkaDTO.avsc
WeatherCastApp/src/main/java/ru/doedating/: Main.java
WeatherCastApp/src/main/java/tb/wca/: WeatherCastApp.java
WeatherCastApp/src/main/resources/: application.yaml
WeatherCastApp/src/main/resources/db/migration/: V1__init_schema.sql  V2__add_subcribe.sql  V3__add_indexes.sql
WeatherCastApp/src/test/java/tb/wca/: AbstractContainerBaseTest.java
WeatherCastApp/src/test/resources/: application.properties
WeatherCastApp/src/test/resources/db/migration/: R__testdata.sql
WeatherTgBot/: .env  main.py  pyproject.toml  requirements.txt
WeatherTgBot/src/bot/: bot.py  states.py
WeatherTgBot/src/config/: config.py
WeatherTgBot/src/handlers/: kafka_handler.py  start.py  subscription.py  weather.py
WeatherTgBot/src/keyboards/: city.py  main_menu.py  subscription.py  weather.py
WeatherTgBot/src/middleware/: error_handler.py
WeatherTgBot/src/models/: weather.py
WeatherTgBot/src/services/: kafka_service.py  weather_service.py
WeatherTgBot/src/utils/: cache.py
first_hw/: pom.xml
first_hw/.github/workflows/: maven.yml
first_hw/src/main/resources/: application.yaml
first_hw/src/test/java/: AllTests.java  AnswerTest.java  ExceptionTests.java  ThrowsExceptionTests.java  WeatherServiceTest.java
(+149 files in other folders)
