[project]
name = "weather-tg-bot"
version = "0.1.0"
description = "Telegram bot for weather forecasts"
dependencies = [
    "aiogram>=3.2.0",
    "environs>=9.5.0",
    "confluent-kafka>=2.3.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
